<resources>
    <string name="app_name">UofTBioHacks2021</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="WelcomeMessage">Hello \"username\"! Here are some recommended activities. Be sure to let us know if there are any changes to your health status.</string>
    <string name="RecommendedActivitiesText">Recommended Activities</string>
    <string name="AvoidedActivitiesText">Activities to Avoid</string>
    <string name="AdditionalInfoText">Additional Information</string>
    <string name="HealthUpdatesText">Update My Health Status</string>
    <string name="RecommendedActivities">Retreive from data</string>
    <string name="AvoidedActivities">Retreive from data</string>
    <string name="PrecautionText">Ways to Protect Yourself and Others</string>
    <string name="PrecautionContent">
        Clean your hands often using soap and water, or alcohol.
        <br>Maintain a safe distance from anyone who is coughing or sneezing. </br>
        <br>Wear a mask when physical distancing is not possible. </br>
        <br>Don’t touch your eyes, nose or mouth. </br>
        <br>Cover your nose and mouth with your bent elbow or a tissue when you cough or sneeze. </br>
        <br>Stay home if you feel unwell. </br>
        <br>If you have a fever, cough and difficulty breathing, seek medical attention</br></string>
    <string name="MentalHealthText">Ways to Care for Your Mental Health</string>
    <string name="MentalHealthContent">
        Take a break from the news and social media - these can stress you out.
        <br>Take care of your body, whether that be exercising or eating well.</br>
        <br>Get plenty of sleep. Avoid excessive alcohol, tobacco, and substance use.</br>
        <br>Make time to unwind. Try to do some other activities you enjoy.</br>
        <br>Connect with others by phone, video calls, and other means.</br></string>
    <string name="RegistrationMessage">To register, enter a username and password that you will remember. You will create a unique profile which is saved under your username.</string>
    <string name="please_answer_the_following_questions_to_determine_your_risk_for_covid_19_if_none_of_the_responses_corresponds_to_your_situation_choose_the_most_appropriate_response">Please answer the following questions to determine your risk for COVID-19. If none of the responses corresponds to your situation, choose the most appropriate response</string>
    <string name="next">Next</string>
    <string name="agetext">Please select your age bracket</string>
    <string name="exercise">Please select the option that best describes your exercise habits</string>
    <string name="excerciseprompt">Exercise</string>
    <string name="factorsquestion">Please enter any medical conditions you have been diagnosed with and select the appropriate choice</string>
    <string name="factorsprompt">Condition</string>
    <string name="cancer">Cancer</string>
    <string name="CKD">Chronic kidney disease</string>
    <string name="COPD">Chronic Obstructive Pulmonary Disease</string>
    <string name="Down">Down Syndrome</string>
    <string name="Heart">Heart conditions</string>
    <string name="Immunocompromised">Immunocompromised</string>
    <string name="Obe">Obesity (BMI between 30 to 40)</string>
    <string name="severeObe">Obesity (BMI>40)</string>
    <string name="Preg">Pregnancy</string>
    <string name="Sickle">Sickle cell anemia</string>
    <string name="smoke">Smoking</string>
    <string name="diabete">Type 2 diabetes mellitus (pancreatic)</string>
    <string name="conditionAdd">Add</string>
    <string name="conditionComplete">Done</string>
    <string name="lowrisk"><b>low</b> risk</string>
    <string name="medrisk"><b>medium</b> risk</string>
    <string name="highrisk"><b>high</b> risk</string>
    <string name="outbreakNearMename">Click for Outbreaks Near Me:</string>
    <string name="OutbreaksLInk">https://outbreaksnearme.org/ca/en-CA</string>
    <string name="hyperlink">https://outbreaksnearme.org/ca/en-CA</string>
    <string name="moreInfo">For More Resources, Check Out:</string>
    <string name="moreInfoLinks">https://www.canada.ca/en/public-health/services/diseases/2019-novel-coronavirus-infection/guidance-documents.html</string>
    <string name="moreInfoLink2">https://www.who.int/emergencies/diseases/novel-coronavirus-2019/advice-for-public</string>
</resources>